# agentiva

./: .env.example  .gitignore  Dockerfile  LICENSE  PYPI_README.md  README.md  agentshield.db  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
agentiva/: __init__.py  cli.py  project_scan.py
agentiva/api/: chat_router.py
agentiva/interceptor/: mcp_proxy.py
agentiva/policy/: engine.py
agentshield/: cli.py
agentshield/api/: chat.py  server.py
agentshield/db/: database.py  models.py
agentshield/interceptor/: core.py  langchain_hook.py
agentshield/modes/: negotiator.py
agentshield/policy/: behavior_tracker.py  engine.py  smart_scorer.py
agentshield/registry/: agent_registry.py
dashboard/: Dockerfile
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/agents/: page.tsx
dashboard/app/audit/: page.tsx
dashboard/app/dashboard/: page.tsx
dashboard/app/live/: page.tsx
dashboard/components/: app-shell.tsx  shield-chat.tsx  sidebar.tsx
dashboard/lib/: offline-chat.ts  offline-demo.ts
demo/: real_incidents_demo.py
docs/: pitch-deck-pricing-slide.md
examples/: README.md  live_demo.py
policies/: default.yaml
tests/: test_advanced_context_role_baseline_whitelist_drift.py  test_api.py  test_chat.py  test_chat_help_unblock.py  test_cli_scan_init.py  test_database.py  test_edge_cases.py  test_enterprise_approvals_mandatory_geo.py  test_integration_negotiation_flow.py  test_negotiation.py  test_policy.py  test_rollback.py  test_simulator.py  test_smart_scorer.py
website/: index.html  package.json
(+1 files in other folders)
