[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentshield"
version = "0.1.0"
description = "Preview deployments for AI agents"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

[project.scripts]
agentshield = "agentshield.cli:main"
agentshield-server = "agentshield.cli:main"

[tool.setuptools]
include-package-data = true
